[gd_scene load_steps=17 format=4 uid="uid://cf4rbsl2p2a8e"]

[ext_resource type="Script" uid="uid://ffaygal6lgs0" path="res://Scripts/Scenes/gameplay.gd" id="1_xlrks"]
[ext_resource type="PackedScene" uid="uid://6jg502bjlxcc" path="res://Nodes/Global Components/hud.tscn" id="2_rqv2g"]
[ext_resource type="Texture2D" uid="uid://bcpsrejf1wnwn" path="res://Assets/Art/Sprites/Tilemap/TilemapNES.png" id="4_ppahu"]
[ext_resource type="LabelSettings" uid="uid://b4ygd0rhiokqe" path="res://Assets/Fonts/labelSettings.tres" id="10_aykfb"]
[ext_resource type="PackedScene" uid="uid://c0i2qcdea4yl" path="res://Nodes/Player/playerUFO.tscn" id="10_lf2sj"]
[ext_resource type="PackedScene" uid="uid://dl8e2shl6fofv" path="res://Nodes/Player/player.tscn" id="11_3b8en"]
[ext_resource type="PackedScene" uid="uid://crge5gwsssnoo" path="res://Nodes/Global Components/gameCamera.tscn" id="12_oakka"]
[ext_resource type="Script" uid="uid://bpgusj6w8b8ww" path="res://Scripts/Enemy/enemy_group.gd" id="13_5yyl1"]
[ext_resource type="PackedScene" uid="uid://dslakpjmwe1vh" path="res://Nodes/Enemies/enemyBlock.tscn" id="14_q4777"]
[ext_resource type="Script" uid="uid://dasggqyajeq1c" path="res://Scripts/Stage Specific/stage2_setUFOTutorial.gd" id="16_aykfb"]
[ext_resource type="PackedScene" uid="uid://bg5tuvkfkc1t7" path="res://Nodes/Enemies/enemy.tscn" id="16_ybe0m"]
[ext_resource type="TileSet" uid="uid://bt3vewhvgitgu" path="res://Assets/Tilemaps/tilemap_keyboard.tres" id="18_rdxyd"]
[ext_resource type="PackedScene" uid="uid://dukadcev2pjn" path="res://Nodes/Scenes/Menu/PauseMenu.tscn" id="19_foi5a"]
[ext_resource type="PackedScene" uid="uid://cab5m6jmd7dji" path="res://Nodes/Global Components/background.tscn" id="20_yhx3d"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ppahu"]
texture = ExtResource("4_ppahu")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:0/0/terrains_peering_bit/bottom_side = 0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:0/0/terrains_peering_bit/right_side = 0
1:0/0/terrains_peering_bit/bottom_side = 0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:0/0/terrains_peering_bit/right_side = 0
2:0/0/terrains_peering_bit/bottom_side = 0
2:0/0/terrains_peering_bit/left_side = 0
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrain = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:0/0/terrains_peering_bit/bottom_side = 0
3:0/0/terrains_peering_bit/left_side = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:1/0/terrains_peering_bit/bottom_side = 0
0:1/0/terrains_peering_bit/top_side = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:1/0/terrains_peering_bit/right_side = 0
1:1/0/terrains_peering_bit/bottom_side = 0
1:1/0/terrains_peering_bit/top_side = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:1/0/terrains_peering_bit/right_side = 0
2:1/0/terrains_peering_bit/bottom_side = 0
2:1/0/terrains_peering_bit/left_side = 0
2:1/0/terrains_peering_bit/top_side = 0
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrain = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:1/0/terrains_peering_bit/bottom_side = 0
3:1/0/terrains_peering_bit/left_side = 0
3:1/0/terrains_peering_bit/top_side = 0
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:2/0/terrains_peering_bit/top_side = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:2/0/terrains_peering_bit/right_side = 0
1:2/0/terrains_peering_bit/top_side = 0
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:2/0/terrains_peering_bit/right_side = 0
2:2/0/terrains_peering_bit/left_side = 0
2:2/0/terrains_peering_bit/top_side = 0
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/terrain = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:2/0/terrains_peering_bit/left_side = 0
3:2/0/terrains_peering_bit/top_side = 0
0:3/0 = 0
0:3/0/terrain_set = 0
0:3/0/terrain = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/terrain = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:3/0/terrains_peering_bit/right_side = 0
2:3/0 = 0
2:3/0/terrain_set = 0
2:3/0/terrain = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:3/0/terrains_peering_bit/right_side = 0
2:3/0/terrains_peering_bit/left_side = 0
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/terrain = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:3/0/terrains_peering_bit/left_side = 0

[sub_resource type="TileSet" id="TileSet_ro5fr"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 0
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Grass"
terrain_set_0/terrain_0/color = Color(0.16047, 0.445808, 0.317794, 1)
sources/0 = SubResource("TileSetAtlasSource_ppahu")

[node name="Tutorial - Level 03" type="Node2D"]
script = ExtResource("1_xlrks")
nextStage = "uid://c3yq62f4x8a6y"

[node name="HUD" parent="." instance=ExtResource("2_rqv2g")]

[node name="Background" parent="." instance=ExtResource("20_yhx3d")]

[node name="Events" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
script = ExtResource("16_aykfb")

[node name="Jump on him" type="Label" parent="Events"]
layout_mode = 0
offset_left = 114.0
offset_top = 1540.0
offset_right = 1010.0
offset_bottom = 1678.0
text = "Jump on enemies head to stun
â†“"
label_settings = ExtResource("10_aykfb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="UFOTutorial" type="Label" parent="Events"]
visible = false
layout_mode = 0
offset_left = 2130.0
offset_top = 1361.0
offset_right = 3058.0
offset_bottom = 1426.0
text = "Hold SPACE to capture enemies"
label_settings = ExtResource("10_aykfb")

[node name="Controls" type="TileMapLayer" parent="Events/UFOTutorial"]
tile_map_data = PackedByteArray("AAAIAAIADQAAAAAAAAAEAAIACgAAAAAAAAAGAAIABwAAAAAAAAAFAAEABAAAAAAAAAAFAAIAAwAAAAAAAAA=")
tile_set = ExtResource("18_rdxyd")

[node name="Ground" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAABoAAAABAAAAAAAAABsAAAABAAEAAAABABoAAAACAAAAAAABABsAAAACAAEAAAACABoAAAACAAAAAAACABsAAAACAAEAAAADABoAAAACAAAAAAADABsAAAACAAEAAAAEABoAAAACAAAAAAAEABsAAAACAAEAAAAFABoAAAACAAAAAAAFABsAAAACAAEAAAAGABoAAAACAAAAAAAGABsAAAACAAEAAAAHABoAAAACAAAAAAAHABsAAAACAAEAAAAIABoAAAACAAAAAAAIABsAAAACAAEAAAAJABoAAAACAAAAAAAJABsAAAACAAEAAAAKABoAAAACAAAAAAAKABsAAAACAAEAAAALABkAAAABAAAAAAALABoAAAACAAEAAAALABsAAAACAAEAAAAMABkAAAADAAAAAAAMABoAAAACAAEAAAAMABsAAAACAAEAAAANABoAAAACAAAAAAANABsAAAACAAEAAAAOABoAAAACAAAAAAAOABsAAAACAAEAAAAPABoAAAACAAAAAAAPABsAAAACAAEAAAAQABQAAAAAAAAAAAAQABUAAAAAAAEAAAAQABYAAAAAAAEAAAAQABoAAAACAAAAAAAQABsAAAACAAEAAAARABoAAAACAAAAAAARABsAAAACAAEAAAASABoAAAACAAAAAAASABsAAAACAAEAAAATABoAAAACAAAAAAATABsAAAACAAEAAAAUABoAAAACAAAAAAAUABsAAAACAAEAAAAVABoAAAACAAAAAAAVABsAAAACAAEAAAAWABkAAAABAAAAAAAWABoAAAACAAEAAAAWABsAAAACAAEAAAAXABQAAAABAAAAAAAXABUAAAABAAEAAAAXABYAAAABAAEAAAAXABcAAAABAAEAAAAXABgAAAABAAEAAAAXABkAAAADAAEAAAAXABoAAAADAAEAAAAYABQAAAACAAAAAAAYABUAAAACAAEAAAAYABYAAAACAAEAAAAYABcAAAACAAEAAAAZABQAAAADAAAAAAAZABUAAAADAAEAAAAZABYAAAADAAEAAAAZABcAAAADAAEAAAAAABwAAAABAAIAAAABABwAAAACAAIAAAACABwAAAACAAIAAAADABwAAAACAAIAAAAEABwAAAACAAIAAAAFABwAAAACAAIAAAAGABwAAAACAAIAAAAHABwAAAACAAIAAAAIABwAAAACAAIAAAAJABUAAAABAAMAAAAJABwAAAACAAIAAAAKABUAAAACAAMAAAAKABwAAAACAAIAAAALABUAAAADAAMAAAALABwAAAACAAIAAAAMABwAAAACAAIAAAANABwAAAACAAIAAAAOABwAAAACAAIAAAAPABwAAAACAAIAAAAQABcAAAAAAAIAAAAQABwAAAACAAIAAAARABwAAAACAAIAAAASABwAAAACAAIAAAATABwAAAACAAIAAAAUABwAAAACAAIAAAAVABwAAAACAAIAAAAWABwAAAADAAIAAAAXABsAAAADAAIAAAAYABgAAAACAAIAAAAZABgAAAADAAIAAAA=")
tile_set = SubResource("TileSet_ro5fr")

[node name="PlayerUFO" parent="." node_paths=PackedStringArray("camera") instance=ExtResource("10_lf2sj")]
position = Vector2(2559, 1666)
collision_mask = 2
camera = NodePath("../GameCamera")

[node name="Player" parent="." instance=ExtResource("11_3b8en")]
position = Vector2(124, 1628)
SPEED = 500.0
acceleration = 1000.0

[node name="GameCamera" parent="." node_paths=PackedStringArray("playerRef", "playerUFORef") instance=ExtResource("12_oakka")]
position = Vector2(1370, 15)
zoom = Vector2(0.7, 0.7)
limit_left = 0
limit_top = 15
limit_right = 6300
limit_bottom = 1800
playerRef = NodePath("../Player")
playerUFORef = NodePath("../PlayerUFO")

[node name="EnemyGroup" type="Node2D" parent="." node_paths=PackedStringArray("playerRef")]
script = ExtResource("13_5yyl1")
playerRef = NodePath("../PlayerUFO")

[node name="Enemy" parent="EnemyGroup" instance=ExtResource("14_q4777")]
position = Vector2(629, 1625)

[node name="Enemy2" parent="EnemyGroup" instance=ExtResource("16_ybe0m")]
position = Vector2(1143, 1630)

[node name="PauseMenu" parent="." instance=ExtResource("19_foi5a")]

[connection signal="wonGame" from="." to="PlayerUFO" method="_on_main_won_game"]
[connection signal="wonGame" from="." to="GameCamera" method="_on_main_won_game"]
[connection signal="captureThemSignal" from="HUD" to="." method="_on_hud_capture_them_signal"]
[connection signal="captureThemSignal" from="HUD" to="Events" method="triggerEvent"]
[connection signal="enemyCaptured" from="PlayerUFO" to="." method="_on_player_ufo_enemy_captured"]
[connection signal="enteredUFO" from="Player" to="." method="_on_player_entered_ufo"]
[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="playerDead" from="Player" to="." method="_on_player_player_dead"]
[connection signal="enemyhit" from="EnemyGroup" to="Player" method="_on_enemy_enemyhit"]
